--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ghpages": "ng build && cp -r docs/browser/* docs/ && touch docs/.nojekyll",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
